--- a/1.html
+++ b/1.html
@@ -24,7 +24,7 @@ background-color: #FAFAA0;
 </ol>
 <div id="article">
   <h2>마카롱</h2>
-  <img src="1.4.png" alt="">
+  <img src="1.4.PNG" alt="">
   <p>마카롱의 이름은 그리스어에서 기인하였다.</p>
    <p>이 단어가 이탈리아어로 옮겨지면서 'maccherone(마카로네)', 'maccaroni(마케로니)'에서 온 것이다.</p>
    <p>'Macaron(마카롱)'과 'maccaroni(마케로니)'는 1650년에 제작된 프랑스어 원본 사전(Les Origines de la Langue Française)에 의하면 '치즈로 뒤덮인 파스타 요리'를 지칭하지만, </p>
