--- a/2.html
+++ b/2.html
@@ -25,7 +25,7 @@ background-color: #FFEAD0;
   </ol>
 <div id="article">
   <h2>런닝맨</h2>
-  <img src="2,1.png" width="600px">
+  <img src="2,1.PNG" width="600px">
               <p>런닝맨은 서울과 같은 대도시의 랜드마크들을 소개하기 위해 제작되었으며 '일요일이 좋다' 코너의 1부에 편성되어 2010년 7월 11일에 첫 방송을 시작하였다.</p>
               <p>첫 방송 당시에는 유재석을 비롯한 남자 7명에서 시작하였지만 2주차 방송에 송지효가 게스트로 나오게 되었다가 고정 맴버가 되어버렸다. </p>
               <p>이후 송중기는 2010년 7월, 개리는 2016년 11월 하차하게 되고 2017년에 양세찬과 전소민이 새로운 맴버로 함류하게 되면서 현재의 런닝맨이 되었다.</p>
