--- a/4.html
+++ b/4.html
@@ -33,7 +33,7 @@ background-color: #dda0dd	;
   <p>학력:학남고등학교 졸업</p>
   <p>데뷔:헨리의 I Iove You 뮤직비디오</p>
 
-<li><h3>슬기(강슬기)</h3></li><img src="슬기.png" width="300">
+<li><h3>슬기(강슬기)</h3></li><img src="슬기.PNG" width="300">
 <p>출생:1994년 2월 10일</p>
 <p>레드벨벳 활동기간: 2014년 8월 1일~</p>
 <p>소속사:sm엔터테인먼트</p>
@@ -41,7 +41,7 @@ background-color: #dda0dd	;
 <p>학력:서울공연예술고등학교 실용무용과 졸업</p>
 <p>데뷔:헨리의Fantastic 뮤직비디오</p>
 
-<li><h3>웬디(손승완)</h3></li><img src="웬디.png" width="300">
+<li><h3>웬디(손승완)</h3></li><img src="웬디.PNG" width="300">
 <p>출생:1994년 2월 21일</p>
 <p>레드벨벳 활동기간: 2014년 8월 1일~</p>
 <p>소속사:sm엔터테인먼트</p>
@@ -49,7 +49,7 @@ background-color: #dda0dd	;
 <p>학력:캐나다 유학, 오바마 대통령상 수상</p>
 <p>데뷔:sm루키즈</p>
 
-<li><h3>JOY(박수영)</h3></li><img src="조이.png" width="350">
+<li><h3>JOY(박수영)</h3></li><img src="조이.PNG" width="350">
 <p>출생:1996년 9월 3일</p>
 <p>레드벨벳 활동기간: 2014년 8월 1일~</p>
 <p>소속사:sm엔터테인먼트</p>
@@ -57,7 +57,7 @@ background-color: #dda0dd	;
 <p>학력:서울공연예술고등학교 실용음악과 졸업</p>
 <p>데뷔:레드벨벳 Happiness</p>
 
-<li><h3>예리(김예림)</h3></li><img src="예리.png" width="300">
+<li><h3>예리(김예림)</h3></li><img src="예리.PNG" width="300">
 <p>출생:1999년 3월 5일</p>
 <p>레드벨벳 활동기간: 2014년 3월 19일~</p>
 <p>소속사:sm엔터테인먼트</p>
