--- a/8.html
+++ b/8.html
@@ -25,7 +25,7 @@ background-color: #FFEAD0;
   </ol>
 <div id="article">
 <h2>런닝맨 기획의도</h2>
-<img src="런2.png" width="600px">
+<img src="런2.PNG" width="600px">
 <p>누구도 상상하지 못했던 예측불허 빅웃음!!</p>
 
 <p>대한민국을 대표하는 랜드마크, 얼마나 알고 계십니까? </p>
