--- a/9.html
+++ b/9.html
@@ -26,7 +26,7 @@ background-color: #FFEAD0;
 <div id="article">
 <h2>런닝맨 맴버</h2>
 <ul>
-  <li><h3>유재석</h3></li> <img src="유재석.png" width="250">
+  <li><h3>유재석</h3></li> <img src="유재석.PNG" width="250">
   <p>출생: 1972년 8월 14일</p>
   <p>가족: 배우자 나경은</p>
   <p>학력: 서울예술대학교 중퇴</p>
@@ -39,7 +39,7 @@ background-color: #FFEAD0;
 <p>2010년 SBS <런닝맨></p>
 <p>2015년 SBS <동상이몽, 괜찮아 괜찮아></p>
 
-  <li><h3>지석진</h3></li><img src="지석진.png" width="250">
+  <li><h3>지석진</h3></li><img src="지석진.PNG" width="250">
   <p>출생:1966년 2월 10일</p>
   <p>소속사:아이오케이컴퍼니</p>
   <p>가족:배우자 류수정, 아들 지현우</p>
@@ -52,7 +52,7 @@ background-color: #FFEAD0;
   <p>2010년 KBS2 <스타골든벨-1학년 1반></p>
   <p>2007년 SBS <진실게임></p>
 
-  <li><h3>김종국</h3></li><img src="김종국.png" width="300">
+  <li><h3>김종국</h3></li><img src="김종국.PNG" width="300">
   <p>출생:1977년 4월 25일</p>
   <p>소속그룹:터보</p>
   <p>소속사:JK엔터테인먼트</p>
@@ -68,7 +68,7 @@ background-color: #FFEAD0;
 
 
 
-    <li><h3>하하(하동훈)</h3></li><img src="하하.png" width="250">
+    <li><h3>하하(하동훈)</h3></li><img src="하하.PNG" width="250">
     <p>출생:1979년 8월 20일, 독일</p>
     <p>소속사:QUNA엔터테인먼트</p>
     <p>가족:배우자  별, 어머니 김옥정, 누나 하쥬리</p>
@@ -78,7 +78,7 @@ background-color: #FFEAD0;
     <p>2007년 라디오 SBS 파워FM <하하의 텐텐클럽></p>
     <p>2010년 SBS <런닝맨></p>
 
-    <li><h3>송지효</h3></li><img src="송지효.png" width="200">
+    <li><h3>송지효</h3></li><img src="송지효.PNG" width="200">
     <p>출생:1981년 8월 15일</p>
     <p>소속사:마이컨퍼니</p>
     <p>학력:경문대학 세계회계과</p>
@@ -91,7 +91,7 @@ background-color: #FFEAD0;
     <p>2010년 SBS <런닝맨></p>
     <p>2016년 드라마 JTBC <이번 주 아내가 바람을 핍니다></p>
 
-    <li><h3>이광수</h3></li><img src="광수.png" width="200">
+    <li><h3>이광수</h3></li><img src="광수.PNG" width="200">
       <p>출생:1985년 7월 14일</p>
   <p>소속사:스타쉽 엔터테인먼트</p>
   <p>데뷔:2007년 모뎀 활동</p>
@@ -104,7 +104,7 @@ background-color: #FFEAD0;
 <p>2014년 드라마 SBS <괜찮아 사랑이야></p>
 <p>2016년 시트콤 KBS2 <마음의 소리></p>
 
-    <li><h3>전소민</li><img src="소민.png" width="200">
+    <li><h3>전소민</li><img src="소민.PNG" width="200">
       <p>출생:1986년 4월 7일</p>
       <p>소속사:아이엠 엔터테인먼트</p>
       <p>학력:동덕여대 방송연예과 졸업</p>
@@ -116,7 +116,7 @@ background-color: #FFEAD0;
     <p>2014년 드라마 SBS <끝없는 사랑></p>
     <p>2017년 SBS <런닝맨></p>
 
-      <li><h3>양세찬</li><img src="세찬.png" width="200">
+      <li><h3>양세찬</li><img src="세찬.PNG" width="200">
         <p>출생:1986년 12월 8일</p>
         <p>소속그룹:트리플 악셀</p>
         <p>소속사:A9 미디어</p>
